--- a/my-os/Makefile
+++ b/my-os/Makefile
@@ -4,7 +4,8 @@ BUILD_DIR ?= /home/yydcnjjw/workspace/code/project/my-os/.obj/my-os
 ARCH = x86
 ARCHDIR = arch/$(ARCH)
 
-CFLAGS ?= -O2 -g
+# CFLAGS ?= -O2 -g
+CFLAGS ?= -g
 CPPFLAGS ?=
 LDFLAGS ?=
 
@@ -38,9 +39,12 @@ $(ARCHDIR)/kernel/early_printk.o \
 $(ARCHDIR)/kernel/printk.o \
 $(ARCHDIR)/kernel/vsprintf.o \
 $(ARCHDIR)/kernel/multiboot2.o \
-$(ARCHDIR)/boot.o \
 $(ARCHDIR)/idt.o \
+$(ARCHDIR)/gdt.o \
+$(ARCHDIR)/apic.o \
+$(ARCHDIR)/head_64.o \
 $(ARCHDIR)/head64.o \
+$(ARCHDIR)/boot.o \
 mm/memblock.o \
 mm/stack_alloc.o \
 init/main.o
@@ -55,10 +59,13 @@ $(BUILD_DIR):
 
 my-os.kernel: $(OBJS) $(ARCHDIR)/linker.ld
 	ld -o $(BUILD_DIR)/$@ -T $(ARCHDIR)/linker.ld $(LDFLAGS) $(foreach f, $(OBJS), $(BUILD_DIR)/$(f))
-# objcopy -I elf64-x86-64 -S -R ".eh_frame" -R ".comment" -O binary $(BUILD_DIR)/$@ $(BUILD_DIR)/$@.bin
+	objcopy -I elf64-x86-64 -S -R ".eh_frame" -R ".comment" -O binary $(BUILD_DIR)/$@ $(BUILD_DIR)/$@.bin
 	grub-file --is-x86-multiboot2 $(BUILD_DIR)/$@
 
 %.o: %.c
+	$(CC) -MD -c -o $(BUILD_DIR)/$@ $(CFLAGS) $<
+
+%.o: %.S
 	$(CC) -MD -c -o $(BUILD_DIR)/$@ $(CFLAGS) $<
 
 %.o: %.nasm
