--- a/my-os/Makefile
+++ b/my-os/Makefile
@@ -52,6 +52,7 @@ $(ARCHDIR)/smp.o \
 $(ARCHDIR)/smp_boot.o \
 $(ARCHDIR)/hpet.o \
 $(ARCHDIR)/acpi.o \
+$(ARCHDIR)/irq.o \
 lib/string.o \
 mm/memblock.o \
 mm/stack_alloc.o \
